# us_zip_codes

./: .gitignore  get_us_zipcodes.sh  load_us_zipcodes.sql  main.py  pyproject.toml  simple.py
scrapers/: __init__.py  base.py  grubhub.py  runner.py
selenium/chrome/: chrome.py  download_chrome.sh  example.py
src/browser/: README.md
src/browser/chrome/: __init__.py  chrome.py  download_chrome.sh
src/db/: get_us_zipcodes.sh  load_us_zipcodes.sql
src/db/conn/: __init__.py  conn.py
src/db/queries/: __init__.py  scraping_queries.py
src/proxies/: __init__.py  proxy_manager.py
src/scrapers/: __init__.py  async-io-example.py  base.py  exceptions.py  grubhub.1.bash  grubhub.py  postmates.py  runner.py  simple.py
