[tool.poetry]
name = "us_zip_codes"
version = "0.1.0"
description = ""
authors = ["Ben Wallad <bwallad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
aiohttp = "^3.6.2"
ipdb = "^0.13.2"
click = "^7.1.2"
requests = "^2.23.0"
asyncpg = "^0.20.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
